# learn-opengl-rs

./: .gitignore  Cargo.toml
src/: camera.rs  common.rs  main.rs  mesh.rs  model.rs  shader.rs
src/_1_getting_started/: _1_1_hello_window.rs  _1_2_hello_window_clear.rs  _2_1_hello_triangle.rs  _2_2_hello_triangle_indexed.rs  _2_3_hello_triangle_exercise1.rs  _2_4_hello_triangle_exercise2.rs  _2_5_hello_triangle_exercise3.rs  _3_1_shaders_uniform.rs  _3_2_shaders_interpolation.rs  _3_3_shaders_class.rs  _4_1_textures.rs  _4_2_textures_combined.rs  _4_3_textures_exercise2.rs  _4_4_textures_exercise3.rs  _4_5_textures_exercise4.rs  _5_1_transformations.rs  _5_2_transformations_exercise2.rs  _6_1_coordinate_systems.rs  _6_2_coordinate_systems_depth.rs  _6_3_coordinate_systems_multiple.rs  _7_1_camera_circle.rs  _7_2_camera_keyboard_dt.rs  _7_3_camera_mouse_zoom.rs  _7_4_camera_class.rs  mod.rs
src/_2_lighting/: _1_colors.rs  _2_1_basic_lighting_diffuse.rs  _2_2_basic_lighting_specular.rs  _3_1_materials.rs  _3_2_materials_exercise1.rs  _4_1_lighting_maps_diffuse_map.rs  _4_2_lighting_maps_specular_map.rs  _4_3_lighting_maps_exercise4.rs  _5_1_light_casters_directional.rs  _5_2_light_casters_point.rs  _5_3_light_casters_spot.rs  _5_4_light_casters_spot_soft.rs  _6_multiple_lights.rs  mod.rs
src/_3_model_loading/: _1_model_loading.rs  mod.rs
src/_4_advanced_opengl/: _10_1_instancing_quads.rs  _10_2_asteroids.rs  _10_3_asteroids_instanced.rs  _11_anti_aliasing_offscreen.rs  _1_1_depth_testing.rs  _1_2_depth_testing_view.rs  _2_stencil_testing.rs  _3_1_blending_discard.rs  (+10 more)
(+21 files in other folders)
