[package]
authors = ["Benjamin Wasty <benny.wasty@gmail.com>"]
name = "learn-opengl-rs"
version = "0.6.1"

[dependencies]
cgmath = "0.17"
gl = "0.14"
glfw = "0.34"
image = "0.22"
# only needed from chapter 3 on
tobj = "0.1"
num = "0.2"
rand = "0.7"

[features]
default = [
    "chapter-1",
    "chapter-2",
    "chapter-3",
    "chapter-4",
    "chapter-5",
    "chapter-6",
    "chapter-7"
]
chapter-1 = []
chapter-2 = []
chapter-3 = []
chapter-4 = []
chapter-5 = []
chapter-6 = []
chapter-7 = []
